--- a/_sass/_bootstrap_variables.scss
+++ b/_sass/_bootstrap_variables.scss
@@ -1,3 +1,5 @@
+@import "bootstrap/functions";
+
 /*-----Theme colors-----*/
 $primary:       #0d6efd;
 $secondary:     #6c757d;
@@ -8,3 +10,5 @@ $dark:          #212529;
 $link-decoration: none;
 $nav-link-color: $dark;
 $nav-link-hover-color: $primary;
+
+@import "bootstrap/variables";
