--- a/_sass/_bootstrap_variables.scss
+++ b/_sass/_bootstrap_variables.scss
@@ -6,5 +6,7 @@ $dark:          #212529;
 
 /*-----Custom values for Bootstrap variables-----*/
 $link-decoration: none;
-$nav-link-color: $dark;
-$nav-link-hover-color: $primary;
+$navbar-light-color: $dark;
+$navbar-light-hover-color: $primary;
+
+// Find out which bootstrap variables you can use to fine tune the styling of your website here: https://github.com/ELIXIR-Belgium/elixir-toolkit-theme/blob/main/_sass/bootstrap/_variables.scss
